--- a/Spotify Clone/index.html
+++ b/Spotify Clone/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Clone</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/brands.min.css"
+        integrity="sha512-8RxmFOVaKQe/xtg6lbscU9DU0IRhURWEuiI0tXevv+lXbAHfkpamD4VKFQRto9WgfOJDwOZ74c/s9Yesv3VvIQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -17,11 +23,19 @@
         </ul>
     </nav>
     <div class="container">
+        <h1>Daily mixups</h1>
         <div class="songsLists"></div>
         <div class="songBg"></div>
 
     </div>
-    <div class="bottom"></div>
+    <div class="bottom">
+        <input type="range" name="range" id="range-cont" min="0" max="100" />
+        <div class="icon-cont">
+            <i class="fa-solid fa-2x fa-backward"></i>
+            <i class="fa-solid fa-2x fa-play"></i>
+            <i class="fa-solid fa-2x fa-forward"></i>
+        </div>
+    </div>
     <script src="/script.js"></script>
 </body>
 
