--- a/Spotify Clone/index.html
+++ b/Spotify Clone/index.html
@@ -23,17 +23,31 @@
         </ul>
     </nav>
     <div class="container">
-        <h1>Daily mixups</h1>
-        <div class="songsLists"></div>
+
+        <div class="songsLists">
+            <h1>Daily mixups</h1>
+            <div>
+                <div class="song-item-cont">
+                    <img src="./list.webp" alt="list-img" />
+                    <span>Love me like you do</span>
+                    <span class="songPlay">
+                        <span class="time">5:20</span>
+                        <i class="fa-regular  fa-circle-play"></i>
+
+                    </span>
+                </div>
+            </div>
+
+        </div>
         <div class="songBg"></div>
 
     </div>
     <div class="bottom">
         <input type="range" name="range" id="range-cont" min="0" max="100" />
         <div class="icon-cont">
-            <i class="fa-solid fa-2x fa-backward"></i>
-            <i class="fa-solid fa-2x fa-play"></i>
-            <i class="fa-solid fa-2x fa-forward"></i>
+            <i class="fa-solid fa-2x fa-backward-step"></i>
+            <i class="fa-regular fa-2x fa-circle-play"></i>
+            <i class="fa-solid  fa-2x fa-forward-step"></i>
         </div>
     </div>
     <script src="/script.js"></script>
