html css work done

--- a/Spotify Clone/index.html
+++ b/Spotify Clone/index.html
@@ -36,6 +36,78 @@
 
                     </span>
                 </div>
+                <div class="song-item-cont">
+                    <img src="./list.webp" alt="list-img" />
+                    <span>Love me like you do</span>
+                    <span class="songPlay">
+                        <span class="time">5:20</span>
+                        <i class="fa-regular  fa-circle-play"></i>
+
+                    </span>
+                </div>
+                <div class="song-item-cont">
+                    <img src="./list.webp" alt="list-img" />
+                    <span>Love me like you do</span>
+                    <span class="songPlay">
+                        <span class="time">5:20</span>
+                        <i class="fa-regular  fa-circle-play"></i>
+
+                    </span>
+                </div>
+                <div class="song-item-cont">
+                    <img src="./list.webp" alt="list-img" />
+                    <span>Love me like you do</span>
+                    <span class="songPlay">
+                        <span class="time">5:20</span>
+                        <i class="fa-regular  fa-circle-play"></i>
+
+                    </span>
+                </div>
+                <div class="song-item-cont">
+                    <img src="./list.webp" alt="list-img" />
+                    <span>Love me like you do</span>
+                    <span class="songPlay">
+                        <span class="time">5:20</span>
+                        <i class="fa-regular  fa-circle-play"></i>
+
+                    </span>
+                </div>
+                <div class="song-item-cont">
+                    <img src="./list.webp" alt="list-img" />
+                    <span>Love me like you do</span>
+                    <span class="songPlay">
+                        <span class="time">5:20</span>
+                        <i class="fa-regular  fa-circle-play"></i>
+
+                    </span>
+                </div>
+                <div class="song-item-cont">
+                    <img src="./list.webp" alt="list-img" />
+                    <span>Love me like you do</span>
+                    <span class="songPlay">
+                        <span class="time">5:20</span>
+                        <i class="fa-regular  fa-circle-play"></i>
+
+                    </span>
+                </div>
+                <div class="song-item-cont">
+                    <img src="./list.webp" alt="list-img" />
+                    <span>Love me like you do</span>
+                    <span class="songPlay">
+                        <span class="time">5:20</span>
+                        <i class="fa-regular  fa-circle-play"></i>
+
+                    </span>
+                </div>
+                <div class="song-item-cont">
+                    <img src="./list.webp" alt="list-img" />
+                    <span>Love me like you do</span>
+                    <span class="songPlay">
+                        <span class="time">5:20</span>
+                        <i class="fa-regular  fa-circle-play"></i>
+
+                    </span>
+                </div>
             </div>
 
         </div>
@@ -48,6 +120,10 @@
             <i class="fa-solid fa-2x fa-backward-step"></i>
             <i class="fa-regular fa-2x fa-circle-play"></i>
             <i class="fa-solid  fa-2x fa-forward-step"></i>
+        </div>
+        <div class="gif">
+            <img src="./gif.webp" alt="gif" />
+            <p>Enjoy the music</p>
         </div>
     </div>
     <script src="/script.js"></script>
