--- a/Spotify Clone/index.html
+++ b/Spotify Clone/index.html
@@ -27,84 +27,84 @@
         <div class="songsLists">
             <h1>Daily mixups</h1>
             <div>
-                <div class="song-item-cont">
+                <div class="songItem">
                     <img src="./list.webp" alt="list-img" />
-                    <span>Love me like you do</span>
+                    <span class="songName">Love me like you do</span>
                     <span class="songPlay">
                         <span class="time">5:20</span>
-                        <i class="fa-regular  fa-circle-play"></i>
+                        <i id="0" class="fa-regular songListPlay  fa-circle-play"></i>
 
                     </span>
                 </div>
-                <div class="song-item-cont">
+                <div class="songItem">
                     <img src="./list.webp" alt="list-img" />
-                    <span>Love me like you do</span>
+                    <span class="songName">Love me like you do</span>
                     <span class="songPlay">
                         <span class="time">5:20</span>
-                        <i class="fa-regular  fa-circle-play"></i>
+                        <i id="1" class="fa-regular songListPlay  fa-circle-play"></i>
 
                     </span>
                 </div>
-                <div class="song-item-cont">
+                <div class="songItem">
                     <img src="./list.webp" alt="list-img" />
-                    <span>Love me like you do</span>
+                    <span class="songName">Love me like you do</span>
                     <span class="songPlay">
                         <span class="time">5:20</span>
-                        <i class="fa-regular  fa-circle-play"></i>
+                        <i id="2" class="fa-regular songListPlay  fa-circle-play"></i>
 
                     </span>
                 </div>
-                <div class="song-item-cont">
+                <div class="songItem">
                     <img src="./list.webp" alt="list-img" />
-                    <span>Love me like you do</span>
+                    <span class="songName">Love me like you do</span>
                     <span class="songPlay">
                         <span class="time">5:20</span>
-                        <i class="fa-regular  fa-circle-play"></i>
+                        <i id="3" class="fa-regular songListPlay  fa-circle-play"></i>
 
                     </span>
                 </div>
-                <div class="song-item-cont">
+                <div class="songItem">
                     <img src="./list.webp" alt="list-img" />
-                    <span>Love me like you do</span>
+                    <span class="songName">Love me like you do</span>
                     <span class="songPlay">
                         <span class="time">5:20</span>
-                        <i class="fa-regular  fa-circle-play"></i>
+                        <i id="4" class="fa-regular songListPlay  fa-circle-play"></i>
 
                     </span>
                 </div>
-                <div class="song-item-cont">
+                <div class="songItem">
                     <img src="./list.webp" alt="list-img" />
-                    <span>Love me like you do</span>
+                    <span class="songName">Love me like you do</span>
                     <span class="songPlay">
                         <span class="time">5:20</span>
-                        <i class="fa-regular  fa-circle-play"></i>
+                        <i id="5" class="fa-regular songListPlay  fa-circle-play"></i>
 
                     </span>
                 </div>
-                <div class="song-item-cont">
+                <div class="songItem">
                     <img src="./list.webp" alt="list-img" />
-                    <span>Love me like you do</span>
+                    <span class="songName">Love me like you do</span>
                     <span class="songPlay">
                         <span class="time">5:20</span>
-                        <i class="fa-regular  fa-circle-play"></i>
+                        <i id="6" class="fa-regular songListPlay  fa-circle-play"></i>
 
                     </span>
                 </div>
-                <div class="song-item-cont">
+                <div class="songItem">
                     <img src="./list.webp" alt="list-img" />
-                    <span>Love me like you do</span>
+                    <span class="songName">Love me like you do</span>
                     <span class="songPlay">
                         <span class="time">5:20</span>
-                        <i class="fa-regular  fa-circle-play"></i>
+                        <i id="7" class="fa-regular songListPlay  fa-circle-play"></i>
 
                     </span>
                 </div>
-                <div class="song-item-cont">
+                <div class="songItem">
                     <img src="./list.webp" alt="list-img" />
-                    <span>Love me like you do</span>
+                    <span class="songName">Love me like you do</span>
                     <span class="songPlay">
                         <span class="time">5:20</span>
-                        <i class="fa-regular  fa-circle-play"></i>
+                        <i id="8" class="fa-regular songListPlay  fa-circle-play"></i>
 
                     </span>
                 </div>
@@ -115,14 +115,14 @@
 
     </div>
     <div class="bottom">
-        <input type="range" name="range" id="range-cont" min="0" max="100" />
+        <input type="range" name="range" id="progress" value-="0" min="0" max="100" />
         <div class="icon-cont">
             <i class="fa-solid fa-2x fa-backward-step"></i>
-            <i class="fa-regular fa-2x fa-circle-play"></i>
+            <i class="fa-regular fa-2x fa-circle-play" id="masterPlay"></i>
             <i class="fa-solid  fa-2x fa-forward-step"></i>
         </div>
         <div class="gif">
-            <img src="./gif.webp" alt="gif" />
+            <img src="./gif.webp" id="gif" alt="gif" />
             <p>Enjoy the music</p>
         </div>
     </div>
