--- a/Spotify Clone/index.html
+++ b/Spotify Clone/index.html
@@ -28,7 +28,7 @@
             <h1>Daily mixups</h1>
             <div>
                 <div class="songItem">
-                    <img src="./list.webp" alt="list-img" />
+                    <img alt="list-img" />
                     <span class="songName">Love me like you do</span>
                     <span class="songPlay">
                         <span class="time">5:20</span>
@@ -37,7 +37,7 @@
                     </span>
                 </div>
                 <div class="songItem">
-                    <img src="./list.webp" alt="list-img" />
+                    <img alt="list-img" />
                     <span class="songName">Love me like you do</span>
                     <span class="songPlay">
                         <span class="time">5:20</span>
@@ -46,7 +46,7 @@
                     </span>
                 </div>
                 <div class="songItem">
-                    <img src="./list.webp" alt="list-img" />
+                    <img alt="list-img" />
                     <span class="songName">Love me like you do</span>
                     <span class="songPlay">
                         <span class="time">5:20</span>
@@ -55,7 +55,7 @@
                     </span>
                 </div>
                 <div class="songItem">
-                    <img src="./list.webp" alt="list-img" />
+                    <img alt="list-img" />
                     <span class="songName">Love me like you do</span>
                     <span class="songPlay">
                         <span class="time">5:20</span>
@@ -64,7 +64,7 @@
                     </span>
                 </div>
                 <div class="songItem">
-                    <img src="./list.webp" alt="list-img" />
+                    <img alt="list-img" />
                     <span class="songName">Love me like you do</span>
                     <span class="songPlay">
                         <span class="time">5:20</span>
@@ -73,16 +73,16 @@
                     </span>
                 </div>
                 <div class="songItem">
-                    <img src="./list.webp" alt="list-img" />
+                    <img alt="list-img" />
                     <span class="songName">Love me like you do</span>
-                    <span class="songPlay">
+                    <span class="songPlay" id="5">
                         <span class="time">5:20</span>
-                        <i id="5" class="fa-regular songListPlay  fa-circle-play"></i>
+                        <i class="fa-regular songListPlay  fa-circle-play"></i>
 
                     </span>
                 </div>
                 <div class="songItem">
-                    <img src="./list.webp" alt="list-img" />
+                    <img alt="list-img" />
                     <span class="songName">Love me like you do</span>
                     <span class="songPlay">
                         <span class="time">5:20</span>
@@ -91,7 +91,7 @@
                     </span>
                 </div>
                 <div class="songItem">
-                    <img src="./list.webp" alt="list-img" />
+                    <img alt="list-img" />
                     <span class="songName">Love me like you do</span>
                     <span class="songPlay">
                         <span class="time">5:20</span>
@@ -100,7 +100,7 @@
                     </span>
                 </div>
                 <div class="songItem">
-                    <img src="./list.webp" alt="list-img" />
+                    <img alt="list-img" />
                     <span class="songName">Love me like you do</span>
                     <span class="songPlay">
                         <span class="time">5:20</span>
