--- a/Spotify Clone/index.html
+++ b/Spotify Clone/index.html
@@ -117,9 +117,9 @@
     <div class="bottom">
         <input type="range" name="range" id="progress" value-="0" min="0" max="100" />
         <div class="icon-cont">
-            <i class="fa-solid fa-2x fa-backward-step"></i>
+            <i class="fa-solid fa-2x fa-backward-step" id="previous"></i>
             <i class="fa-regular fa-2x fa-circle-play" id="masterPlay"></i>
-            <i class="fa-solid  fa-2x fa-forward-step"></i>
+            <i class="fa-solid  fa-2x fa-forward-step" id="next"></i>
         </div>
         <div class="gif">
             <img src="./gif.webp" id="gif" alt="gif" />
